[gd_scene load_steps=3 format=3 uid="uid://b5l843x4m6sg4"]

[ext_resource type="Script" path="res://scenes/menus/settings_menu/settings.gd" id="1_i3dg3"]
[ext_resource type="Theme" uid="uid://pf3bem22ewj7" path="res://ui_theme.tres" id="1_jta67"]

[node name="PopupPanel" type="PopupPanel"]
process_mode = 3
title = "Settings Popup"
initial_position = 2
size = Vector2i(336, 380)
always_on_top = true
theme = ExtResource("1_jta67")

[node name="Background" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="SettingsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Settings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 21
alignment = 1
script = ExtResource("1_i3dg3")

[node name="FullscreenContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings"]
layout_mode = 2
alignment = 1

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/FullscreenContainer" groups=["Button"]]
layout_mode = 2
button_mask = 3
text = "Fullscreen"
flat = true

[node name="MasterContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings"]
layout_mode = 2
alignment = 1

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/MasterContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/MasterContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/MusicContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/MusicContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/SFXContainer"]
layout_mode = 2
text = "SFX Volume
"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/SFXContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/SettingsContainer/Settings" groups=["Button"]]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="toggled" from="MarginContainer/VBoxContainer/SettingsContainer/Settings/FullscreenContainer/CheckButton" to="MarginContainer/VBoxContainer/SettingsContainer/Settings" method="_on_check_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsContainer/Settings/MasterContainer/MasterSlider" to="MarginContainer/VBoxContainer/SettingsContainer/Settings" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/MusicContainer/MusicSlider" to="MarginContainer/VBoxContainer/SettingsContainer/Settings" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsContainer/Settings/VBoxContainer2/SFXContainer/SFXSlider" to="MarginContainer/VBoxContainer/SettingsContainer/Settings" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsContainer/Settings/Back" to="MarginContainer/VBoxContainer/SettingsContainer/Settings" method="_on_back_pressed"]
